# xontrib-distributed

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_xontrib.py
xontrib/: distributed.py
